angularjs 1.x items-test

--- a/src/js/app/styles/sidebar-view.less
+++ b/src/js/app/styles/sidebar-view.less
@@ -7,4 +7,11 @@ sidebar-view {
   width: @sidebar-width + @border-size;
   border-left: @border-size solid @c-gray;
   box-sizing: border-box;
+  padding: 24px;
+}
+
+.sidebar{
+  &__selected{
+    margin-bottom: 24px;
+  }
 }
