--- a/src/js/app/templates/content-view.tpl.html
+++ b/src/js/app/templates/content-view.tpl.html
@@ -1,4 +1,5 @@
-<summary-view last-item="lastItem"></summary-view>
+<some-1 last-item="lastItem" tags="tags"></some-1>
+<!--<summary-view last-item="lastItem" tags="tags"></summary-view>-->
 
 <items-container list="list"
                  set-current="setCurrent({itemId})"
