--- a/src/js/app/templates/summary-view.tpl.html
+++ b/src/js/app/templates/summary-view.tpl.html
@@ -6,7 +6,7 @@
     <div class="content__header__tags">
         <div class="content__header__tags-label">Tags</div>
         <div class="content__header__tags-list-">
-            {{lastItem.tags.toString()}}
+            {{ tags.toString() }}
         </div>
     </div>
 </div>
