--- a/src/js/app/templates/app.tpl.html
+++ b/src/js/app/templates/app.tpl.html
@@ -4,6 +4,7 @@
               list="list"
               set-current="setCurrent({itemId})"
               add-item="addItem({itemName})"
+              tags="tags"
 ></content-view>
 
 <sidebar-view current-item="currentItem"
