--- a/src/js/app/templates/elements-view.tpl.html
+++ b/src/js/app/templates/elements-view.tpl.html
@@ -1,6 +1,6 @@
 <div class="elements-view__ctrls">
   <form ng-submit="setWidth()">
-    <label>Width: <input class="ml-1 mr-1" type="number" ng-model="model.width" min="100" max="600" step="1"></label>
+    <label>Width: <input class="mr-1" type="number" ng-model="model.width" min="100" max="600" step="1"></label>
     <button type="submit">Set</button>
   </form>
 </div>
